--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Nick Present</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <script src='main.js'></script>
     <style>
         .background {
@@ -24,6 +28,7 @@
 </head>
 <body>
     <div class="background">
+        <h1>Se il tuo regalo vuoi scovare.. la password devi indovinare</h1>
         <div class="img">
             <img src="img/IMG_9210.jpg" alt="Descrizione dell'immagine">
         </div>
