--- a/psw2.html
+++ b/psw2.html
@@ -6,24 +6,31 @@
     <title>Nick Present</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <script src='main.js'></script>
     <style>
         .background {
             background-size: cover;
             max-width: 500px;
             margin: 0 auto;
-            height: 600px;
+            height: 800px;
             overflow: hidden;
             margin-top: auto;
         }
 
         img{
             width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
+    
     <div class="background">
+        <h1>Ed anche la seconda.. </h1>
         <div class="img">
             <img src="img/IMG_0575.jpg" alt="Descrizione dell'immagine">
         </div>
