--- a/home.html
+++ b/home.html
@@ -6,9 +6,23 @@
     <title>Nick Present</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    
 </head>
 <body>
-    
+    <div class="container">
+
+        <div id="box" class="box">
+            <img class="box-icon" src="img/ico-omino.png" alt="icon">
+        </div>
+        <div id="modal" class="modal-overlay modal-hidden">
+            <div class="modal-window">
+                <div class="modal-content">
+                    <img src="img/present.png" alt= "present">
+                </div>
+                <button class="modal-button">Close</button>
+            </div>
+        </div>
+    </div>
+    <script src='main.js'></script>
 </body>
 </html>
