--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             background-size: cover;
             max-width: 500px;
             margin: 0 auto;
-            height: 800px;
+            height: 1000px;
             overflow: hidden;
         }
 
         img{
-            width: 140%;
+            width: 100%;
         }
     </style>
 </head>
@@ -39,6 +39,8 @@
                 <input type="submit" value="Accedi">
             </form>
         </div>
+
+        <h3>Se ti piace giocare.. un indizio potrai avere.. </h1>
     </div>
 
     <script>
