--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <div id="modal" class="modal-overlay modal-hidden">
             <div class="modal-window">
                 <div class="modal-content">
-                    <img src="img/present.png" alt= "present">
+                    <img class="model-icon" src="img/present.png" alt= "present">
                 </div>
                 <button class="modal-button">Close</button>
             </div>
