--- a/psw2.html
+++ b/psw2.html
@@ -31,6 +31,7 @@
     
     <div class="background">
         <h1>Ed anche la seconda.. </h1>
+        <div>
         <div class="img">
             <img src="img/IMG_0575.jpg" alt="Descrizione dell'immagine">
         </div>
@@ -41,7 +42,7 @@
                 <input type="submit" value="Accedi">
             </form>
         </div>
-
+        </div>
         <h3>per un altro indizio.. ti dovrai far insultare </h1>
     </div>
 
