--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <body>
     <div class="background">
         <h1>Se il tuo regalo vuoi scovare.. la password devi indovinare</h1>
+        <div>
         <div class="img">
             <img src="img/IMG_9210.jpg" alt="Descrizione dell'immagine">
         </div>
@@ -39,7 +40,7 @@
                 <input type="submit" value="Accedi">
             </form>
         </div>
-
+        </div>
         <h3>Se ti piace giocare.. un indizio potrai avere.. </h1>
     </div>
 
