--- a/psw2.html
+++ b/psw2.html
@@ -36,7 +36,7 @@
             <img src="img/IMG_0575.jpg" alt="Descrizione dell'immagine">
         </div>
         <div class="login-container">
-            <form id="login-form">
+            <form style="margin-top: 20px; id="login-form">
                 <input type="password" placeholder="Password" id="password" autocomplete="off">
                 <br><br>
                 <input type="submit" value="Accedi">
